--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
       <!-- ゲーム開始時の極秘命令ポップアップ -->
       <div id="mission-brief-modal" class="modal hidden">
         <div class="modal-backdrop"></div>
-        <div class="modal-content" style="width: 1200px; max-width: 1200px;">
+        <div class="modal-content" style="width: auto; max-width: 1200px;">
           <h2 style="text-align: center; margin-bottom: 24px; color: #f5f5f7;">極秘命令</h2>
-          <div id="mission-brief-content" class="mission-brief-content" style="padding: 20px; background: rgba(0, 0, 0, 0.3); border-radius: 8px; line-height: 1.8; color: #e0e0e0; font-size: 16px; white-space: pre-line;">
+          <div id="mission-brief-content" class="mission-brief-content" style="padding: 20px; background: rgba(0, 0, 0, 0.3); border-radius: 8px; line-height: 1.8; color: #e0e0e0; font-size: 16px; white-space: pre-line; text-align: center;">
           </div>
           <div class="modal-actions" style="justify-content: center; margin-top: 24px;">
             <button id="mission-brief-close" class="btn primary">了解</button>
